[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/maps/map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/cross_heir.png" type="Texture" id=2]
[ext_resource path="res://script/Control.gd" type="Script" id=3]
[ext_resource path="res://scenes/player/HUD/buyMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://scenes/maps/globalBound.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.94902, 0.0627451, 0.0627451, 1 )

[node name="world" type="Node"]

[node name="players" type="Spatial" parent="."]

[node name="position" type="Spatial" parent="."]

[node name="1" type="Position3D" parent="position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 17 )

[node name="2" type="Position3D" parent="position"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 5, -17 )

[node name="3" type="Position3D" parent="position"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 13.2531, 5, -0.0500259 )

[node name="4" type="Position3D" parent="position"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -13.3228, 5, -0.0500259 )

[node name="map" type="Spatial" parent="."]

[node name="Spatial" parent="map" instance=ExtResource( 1 )]

[node name="globalBound" parent="map" instance=ExtResource( 6 )]

[node name="players_info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="crossHeir" type="TextureRect" parent="players_info"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fpsLabel" type="Label" parent="players_info"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -51.41
margin_top = 13.2742
margin_right = -11.41
margin_bottom = 27.2742
size_flags_horizontal = 2
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hpBar" type="ProgressBar" parent="players_info"]
margin_left = 8.32443
margin_top = 8.32445
margin_right = 178.324
margin_bottom = 35.3244
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="players_info"]
modulate = Color( 0.14902, 0.14902, 0.14902, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="timeLabel" type="Label" parent="players_info"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.6908
margin_right = 20.0
margin_bottom = 31.6908
text = "60"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="gunAmmoLabel" type="Label" parent="players_info"]
margin_left = 16.0
margin_top = 51.2947
margin_right = 56.0
margin_bottom = 65.2947
rect_scale = Vector2( 1.04167, 1.25 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="scoreLabel" type="Label" parent="players_info"]
margin_left = 186.0
margin_top = 16.0
margin_right = 226.0
margin_bottom = 30.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="players" type="Panel" parent="players_info"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -144.0
margin_right = 96.0
margin_bottom = 144.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="scoreLabel" type="Label" parent="players_info/players"]
margin_left = 32.0
margin_top = 4.0
margin_right = 160.0
margin_bottom = 36.0
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="1" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 68.0
margin_right = 64.0
margin_bottom = 98.0
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/1"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 100.0
margin_right = 64.0
margin_bottom = 130.0
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/2"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 132.0
margin_right = 64.0
margin_bottom = 162.0
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/3"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 164.0
margin_right = 64.0
margin_bottom = 194.0
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/4"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 196.0
margin_right = 64.0
margin_bottom = 226.0
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/5"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Label" parent="players_info/players"]
visible = false
margin_left = 32.0
margin_top = 228.0
margin_right = 64.0
margin_bottom = 258.0
text = "6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="players_info/players/6"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buyMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )
